--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
     "url": "https://github.com/Andriii888/goit-js-hw-08.git/issues"
   },
   "dependencies": {
-    "modern-normalize": "^1.1.0"
-  },
-  "devDependencies": {
-    "@parcel/transformer-sass": "^2.6.0",
-    "@vimeo/player": "^2.18.0",
+    "modern-normalize": "^1.1.0",
+        "@vimeo/player": "^2.18.0",
     "lodash.throttle": "^4.1.1",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4",
     "simplelightbox": "^2.10.4"
+
+  },
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.6.0"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
